@@ -2,7 +2,9 @@ from fabrix.config import conf, local_conf, read_config
 from fabrix.editor import edit_file, edit_local_file, edit_ini_section, edit_text
 from fabrix.editor import insert_line, delete_line, prepend_line, append_line, replace_line, substitute_line, strip_line
 from fabrix.ioutil import read_file, read_local_file, write_file, write_local_file, debug, copy_file, rsync, chown, chmod
-from fabrix.system import is_reboot_required, reboot_and_wait, disable_selinux
+from fabrix.system import systemctl_enable, systemctl_disable, systemctl_mask, systemctl_unmask
+from fabrix.system import systemctl_start, systemctl_stop, systemctl_reload, systemctl_restart
+from fabrix.system import is_reboot_required, reboot_and_wait, disable_selinux, hide_run
 from fabrix.rpmyum import yum_install, yum_remove, yum_update
 from fabrix.render import render_template
 
